--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -21,6 +21,7 @@
     height: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
     /* background-color: green; */
 }
 ul{
@@ -32,7 +33,6 @@ ul > li{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top:0.6vw;
     margin-right:2.5vw;
 }
 ul > li > a{
@@ -40,15 +40,18 @@ ul > li > a{
     font-size: 14px;
     text-decoration: none;
 }
-ul > li:last-child {
+.contact-button{
     width: 91px;
     height: 40px;
     padding: 10px 20px;
     border-radius: 5px; 
+    font-size:14px;
+    font-family: "Manrope";
     background-color: #F84646;
-}
-ul > li:last-child > a {
     color:#FFFFFF;
+    border:none;
+    outline: none;
+    cursor: pointer;
 }
 
 /* Responsive Area */
@@ -67,14 +70,19 @@ ul > li:last-child > a {
     }
     .hamburger-button{
         display: flex;
+        padding-left:5px;
     }
     .navbar-right-side{
         width: 80%;
+        justify-content: flex-end;
+        padding-right: 15px;
+        /* responsive navbar contact button içeriden verilen boşluk*/
     }
     .menu{
         display: none;
     }
-    ul.menu > li:last-child{
+    .contact-button{
         display: flex;
+        
     }
 }
