--- a/src/components/contentbox/contentbox.css
+++ b/src/components/contentbox/contentbox.css
@@ -31,21 +31,17 @@
 .content-box > h3{
     text-align: center;
     font-size:24px;
-    font-weight: 800;
     font-family: "Manrope";
+    line-height: 32.78px;
+    font-weight: 800;
     letter-spacing: 0.2px;
-    
 }
 .content-box > p{
     text-align: center;
     font-size:18px;
     font-family: "Manrope";
+    line-height: 28px;
     letter-spacing: 0.2px;
-}
-.image-box{
-    width:75px;
-    height: 75px;
-    /* background-color: blue; */
 }
 
 @media screen and (max-width:1024px){
