--- a/src/components/mainexplain/mainexplain.css
+++ b/src/components/mainexplain/mainexplain.css
@@ -22,26 +22,26 @@
 .inner-content{
     width: 50%;
     height: 100%;
-    padding: 25px ;
+    padding: 12px;
     box-sizing: border-box;
     background-color: pink;
 }
 .inner-content h1{
-    font-size:58px;
     font-weight: 700;
-    line-height: 59.5px;
+    font-size:64px;
+    line-height: 76px;
     font-family: "Manrope";
     color:#2E2E2E;
 }
 .inner-content p{
-    font-size:14px;
+    font-size:16px;
+    line-height: 32px;
     font-family: "Manrope";
     color:#808080;
-    line-height: 28.5px;
     letter-spacing: 0.2px;
 }
 .inner-content button{
-    width: 160.93px;
+    width: 160px;
     height: 48px;
     border-radius: 8px;
     line-height: 24px;
@@ -66,6 +66,22 @@
     height: 300px;
     background-color: #F84646;
 }
+@media screen and (max-width:1024px){
+    .inner-content h1{
+        font-size: 58px;
+        line-height: 59.5px;
+    }
+    .inner-content p{
+        font-size: 14px;
+        line-height: 28.5px;
+    }
+    .mainexplain-container{
+        height: auto;
+    }
+    .mainexplain-inner-up, .mainexplain-inner-down{
+        height: auto;
+    }
+}
 @media screen and (max-width:600px){
     .inner-content, .inner-photo{
         width: 100%;
@@ -79,11 +95,20 @@
     }
     .mainexplain-inner-down{
         flex-direction: column;
+        height: auto;
     }
     .mainexplain-container{
         width:100%;
         height: auto;
         background-color: gray;
+    }
+    .inner-content h1{
+        font-size: 36px;
+        line-height: 41.5px;
+    }
+    .inner-content button{
+        width: 338px;
+        height: 48px;
     }
 }
 @media screen and (max-width:300px){
