--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -24,18 +24,18 @@
     align-items: center;
     /* background-color: green; */
 }
-ul.menu{
+ul{
     display: flex;
     justify-content: space-between;
     list-style-type: none;
 }
-ul.menu > li{
+ul > li{
     display: flex;
     justify-content: center;
     align-items: center;
     margin-right:2.5vw;
 }
-ul.menu > li > a{
+ul > li > a{
     color:#000000;
     font-size: 14px;
     text-decoration: none;
