--- a/src/components/reference/reference.css
+++ b/src/components/reference/reference.css
@@ -41,12 +41,14 @@
     height: 70%;
     display: flex;
     flex-direction: row;
+    
     /* background-color: green; */
 }
 .kolon-1,.kolon-2,.kolon-3,.kolon-4,.kolon-5{
     width: 20%;
     height: 100%;
-    margin:0px 5px;
+    padding:0px 5px;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -83,7 +85,7 @@
         width: 100%;
     }
     .box-white{
-        width: 120px;
+        width: 115px;
         height: 66px;
     }
 }
