--- a/src/components/contentbox/contentbox.css
+++ b/src/components/contentbox/contentbox.css
@@ -43,6 +43,10 @@
     line-height: 28px;
     letter-spacing: 0.2px;
 }
+.contentBox-photo{
+    width:50px;
+    height: 50px;
+}
 
 @media screen and (max-width:1024px){
     .content-box{
