--- a/src/components/contentbox/contentbox.css
+++ b/src/components/contentbox/contentbox.css
@@ -54,12 +54,15 @@
         height: 32%;
         margin:5px;
     }
+    .content-box-container{
+        height: auto;
+    }
 }
 
 @media screen and (max-width:600px){
     .content-box-container{
         width:100%;
-        height: 2000px;
+        height: auto;
         display: flex;
         justify-content: center;
         align-items: center;
