--- a/src/components/mainexplain/mainexplain.css
+++ b/src/components/mainexplain/mainexplain.css
@@ -66,7 +66,12 @@
         width:504px;
         height: 480px;
 }
-
+.desktop-ok{
+    display: block;
+}
+.mobile-ok{
+    display: none;
+}
 @media screen and (max-width:1024px){
     .inner-content h1{
         font-size: 58px;
@@ -85,6 +90,9 @@
     .inner-photo-settings{
         width:424px;
         height: 404px;
+    }
+    .down-ok{
+        display: none;
     }
 }
 @media screen and (max-width:600px){
@@ -106,7 +114,6 @@
     .mainexplain-container{
         width:100%;
         height: auto;
-        background-color: gray;
     }
     .inner-content h1{
         font-size: 36px;
@@ -120,8 +127,14 @@
         width:335px;
         height: 312px;
     }
+    .desktop-ok{
+        display: none;
+    }
+    .mobile-ok{
+        display: block;
+    }
 }
-@media screen and (max-width:300px){
+@media screen and (max-width:400px){
     .inner-content h1{
         font-size:32px;
     }
